Add timer start on successful location save
Start a timer when the location is saved successfully.

--- a/retailer.html
+++ b/retailer.html
@@ -1010,6 +1010,8 @@ async function getRetailerLocation() {
 
         alert("📍 Location saved successfully ✅");
 
+// ⏳ Start 10 hour timer immediately
+updateLocationTimer(Date.now(), false);
       } catch (err) {
         console.error("❌ Location save error", err);
         profileLocation.value = "";
