--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -525,102 +525,100 @@ async function runDeliveryCalc(){
 }
 // ---------------- DIRECT BUY ----------------
 async function directBuy(e){
-  e.preventDefault();
+e.preventDefault();
 
-  if(!selectedProduct){
-    alert("Product not selected");
-    return;
-  }
+if(!selectedProduct){
+alert("Product not selected");
+return;
+}
 
-  if(!currentRetailerLoc || !currentWholesalerLoc){
-    alert("📍 Location missing. Please calculate delivery first");
-    return;
-  }
+if(!currentRetailerLoc || !currentWholesalerLoc){
+alert("📍 Location missing. Please calculate delivery first");
+return;
+}
 
-  const vehicle = vehicleType.value;
-  if(!vehicle){
-    alert("🚚 Select vehicle first");
-    return;
-  }
+const vehicle = vehicleType.value;
+if(!vehicle){
+alert("🚚 Select vehicle first");
+return;
+}
 
-  const retailerProfile = JSON.parse(localStorage.getItem("retailerProfile") || "{}");
-  if(!retailerProfile.mobile){
-    alert("👤 Please save retailer profile first");
-    return;
-  }
+const retailerProfile =
+JSON.parse(localStorage.getItem("retailerProfile") || "{}");
 
-  const total = Number(selectedProduct.price) + Number(lastDeliveryCharge);
+if(!retailerProfile.mobile){
+alert("👤 Please save retailer profile first");
+return;
+}
 
-  try {
-    // Full info sent to backend
-    const res = await fetch(`${API}/api/orders/pay-and-create`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        amount: total,
-        notes: {
-          type: "direct",
-          productId: selectedProduct._id,
-          productName: selectedProduct.productName,
-          productImg: selectedProduct.images?.[0] || "",
-          price: selectedProduct.price,
-          wholesalerId: selectedProduct.wholesalerId,
-          wholesalerName: selectedProduct.shopName,
-          wholesalerMobile: selectedProduct.mobile,
-          wholesalerLocation: currentWholesalerLoc,
-          retailerName: retailerProfile.name,
-          retailerMobile: retailerProfile.mobile,
-          retailerLocation: currentRetailerLoc,
-          vehicleType: vehicle,
-          totalDelivery: lastDeliveryCharge,
-          retailerPays: lastDeliveryCharge,
-          wholesalerPays: 0
-        }
-      })
-    });
+const total =
+Number(selectedProduct.price) + Number(lastDeliveryCharge);
 
-    const data = await res.json();
-    if(!data.success){
-      alert("❌ Order create failed");
-      return;
-    }
+try{
+const res = await fetch('${API}/api/orders/pay-and-create',{
+method:"POST",
+headers:{ "Content-Type":"application/json" },
+body: JSON.stringify({
+amount: total,
+notes:{
+type:"direct",
 
-    // Razorpay integration
-    const rzp = new Razorpay({
-      key: data.key,
-      amount: data.amount,
-      currency: "INR",
-      order_id: data.order.id,
+productId: selectedProduct._id,
+productName: selectedProduct.productName,
+productImg: selectedProduct.images?.[0] || "",
+price: selectedProduct.price,
 
-      handler: async function(response){
-        alert("✅ Payment Successful 🎉");
+wholesalerId: selectedProduct.wholesalerId,
+wholesalerName: selectedProduct.shopName,
+wholesalerMobile: selectedProduct.mobile,
 
-        // Update backend with payment success
-        await fetch(`${API}/api/orders/payment-success`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            orderId: data.orderId,
-            razorpayPaymentId: response.razorpay_payment_id
-          })
-        });
+wholesalerLocation: currentWholesalerLoc,   // ✅ FIXED
 
-        closeAll();
-      },
+retailerName: retailerProfile.name,
+retailerMobile: retailerProfile.mobile,
 
-      modal: {
-        ondismiss: function(){
-          alert("❌ Payment cancelled");
-        }
-      }
-    });
+retailerLocation: currentRetailerLoc,       // ✅ FIXED
 
-    rzp.open();
+vehicleType: vehicle,
 
-  } catch(err){
-    console.error("Payment Error:", err);
-    alert("❌ Payment error");
-  }
+totalDelivery: lastDeliveryCharge,
+retailerPays: lastDeliveryCharge,
+wholesalerPays: 0
+}
+
+})
+});
+
+const data = await res.json();
+if(!data.success){
+alert("❌ Order create failed");
+return;
+}
+
+const rzp = new Razorpay({
+key: data.key,
+amount: data.amount,
+currency: "INR",
+order_id: data.order.id,
+
+handler(){
+alert("✅ Payment Successful 🎉");
+closeAll();
+},
+
+modal:{
+ondismiss(){
+alert("❌ Payment cancelled");
+}
+}
+});
+
+rzp.open();
+
+}catch(err){
+console.error("Payment Error:", err);
+alert("❌ Payment error");
+}
 }
 loadProducts();
 </script>
